istio-rules/destination-rules-wildcard.yaml
# All services
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: all-services
spec:
  host: *.default.svc.cluster.local
  subsets:
  - name: v2
    labels:
      version: "2.0"
  - name: v1
    labels:
      version: "1.0"
