istio-rules/fault-injection-error-weather.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-error
spec:
  hosts:
  - weather-server
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 100
    route:
    - destination:
        host: weather-server
