istio-rules/request-routing-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weather-default
spec:
  hosts:
  - weather-server
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: weather-server
        subset: v2
  - route:
    - destination:
        host: weather-server
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lunar-phase-default
spec:
  hosts:
  - lunar-phase-server
  http:
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
    - destination:
        host: lunar-phase-server
        subset: v2
  - route:
    - destination:
        host: lunar-phase-server
        subset: v1
